<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="@dimen/keyline_4"
    android:paddingHorizontal="@dimen/keyline_3"
    android:paddingBottom="@dimen/keyline_3">

    <TextView
        android:id="@+id/message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?attr/textAppearanceBody1"
        tools:text="@string/add_on_account_required_body"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Button
        android:id="@+id/positive_button"
        style="?attr/styleTextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/keyline_3"
        android:layout_marginTop="@dimen/keyline_2"
        android:paddingHorizontal="@dimen/keyline_3"
        android:paddingVertical="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/message"
        tools:text="@string/add_on_account_required_log_in_button" />

    <Button
        style="?attr/styleTextButton"
        android:id="@+id/negative_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/keyline_3"
        android:paddingHorizontal="@dimen/keyline_3"
        android:paddingVertical="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/positive_button"
        tools:text="@string/add_on_account_required_sign_up_button" />

</androidx.constraintlayout.widget.ConstraintLayout>